css for summary

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,13 @@ h1 {
 label {
 	font-weight: 700;
 }
+
+.formContainer {
+	background-color: white;
+	border-radius: 20px;
+	height: 600px;
+	width: 750px;
+	overflow: scroll;
+	padding: 20px;
+	margin: 100px auto 0;
+}
