--- a/src/components/order/style.css
+++ b/src/components/order/style.css
@@ -1,13 +1,3 @@
-.formContainer {
-	background-color: white;
-	border-radius: 20px;
-	height: 600px;
-	width: 750px;
-	overflow: scroll;
-	padding: 20px;
-	margin: 100px auto 0;
-}
-
 .buttonContainer {
 	text-align: center;
 }
@@ -16,4 +6,12 @@
 	background-color: #4CAF50;
 	color: white;
 	padding: 10px 25px;
+}
+
+p {
+	line-height: 0;
+}
+
+.indvDetailContainer {
+	margin-bottom: 25px;
 }
